[gd_scene load_steps=7 format=3 uid="uid://c15x6i2ghl0bx"]

[ext_resource type="Script" path="res://scenes/enemies/enemy_blueprint.gd" id="1_b6v16"]
[ext_resource type="Shader" path="res://scenes/enemies/enemy_blueprint.gdshader" id="2_cdmpd"]
[ext_resource type="Texture2D" uid="uid://qgcf73kcan7g" path="res://graphics/lights/textures/circle.png" id="2_pad3w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4cn43"]
radius = 64.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ej20i"]
resource_local_to_scene = true
shader = ExtResource("2_cdmpd")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0tp5j"]
radius = 1664.02

[node name="EnemyBlueprint" type="CharacterBody2D" groups=["Enemy", "Entity"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_b6v16")

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4cn43")

[node name="EnemySprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ej20i")

[node name="EnemyDetection" type="Area2D" parent="."]
collision_layer = 16

[node name="DetectionRadius" type="CollisionShape2D" parent="EnemyDetection"]
shape = SubResource("CircleShape2D_0tp5j")

[node name="ProjectileLaunchPoint" type="Marker2D" parent="."]
position = Vector2(88, 0)

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 0, 0, 1)
energy = 2.5
texture = ExtResource("2_pad3w")
texture_scale = 0.7
